artifacts/network-configs/gateway_ingress-gateway.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - zaap.nandi.sh
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: zaap-nandi-sh-tls
        mode: SIMPLE
