artifacts/network-configs/virtualservice_prometheus.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - zaap.nandi.sh
  http:
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: prometheus-server.prometheus.svc.cluster.local
            port:
              number: 80
